--- a/VolleyballScoreSheet/Views/ScoreSheet/MatchData.xaml
+++ b/VolleyballScoreSheet/Views/ScoreSheet/MatchData.xaml
@@ -1,13 +1,4 @@
-﻿<UserControl
-    x:Class="VolleyballScoreSheet.Views.ScoreSheet.MatchData"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://prismlibrary.com/"
-    Width="791"
-    Height="96"
-    HorizontalAlignment="Left"
-    VerticalAlignment="Top"
-    prism:ViewModelLocator.AutoWireViewModel="True">
+﻿<UserControl x:Class="VolleyballScoreSheet.Views.ScoreSheet.MatchData" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:prism="http://prismlibrary.com/" Width="791" Height="96" HorizontalAlignment="Left" VerticalAlignment="Top" prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
         <Border BorderBrush="Black" BorderThickness="2">
             <Grid>
@@ -20,20 +11,10 @@
                     <RowDefinition Height="26" />
                 </Grid.RowDefinitions>
 
-                <Border
-                    Height="38"
-                    Margin="0,0,0,1"
-                    BorderBrush="Black"
-                    BorderThickness="0,0,0,0.5">
+                <Border Height="38" Margin="0,0,0,1" BorderBrush="Black" BorderThickness="0,0,0,0.5">
                     <Grid>
-                        <TextBlock
-                            Margin="1"
-                            FontSize="10"
-                            Text="大会名" />
-                        <Viewbox
-                            Width="500"
-                            Margin="40,0,0,0"
-                            HorizontalAlignment="Left">
+                        <TextBlock Margin="1" FontSize="10" Text="大会名" />
+                        <Viewbox Width="500" Margin="40,0,0,0" HorizontalAlignment="Left">
                             <TextBlock Text="{Binding MatchName}" />
                         </Viewbox>
                     </Grid>
@@ -46,66 +27,26 @@
                         <ColumnDefinition Width="169" />
                         <ColumnDefinition Width="198" />
                     </Grid.ColumnDefinitions>
-                    <Border
-                        Grid.Column="0"
-                        Margin="0,0,1,1"
-                        BorderBrush="Black"
-                        BorderThickness="0,0.5,0.5,0.5">
+                    <Border Grid.Column="0" Margin="0,0,1,1" BorderBrush="Black" BorderThickness="0,0.5,0.5,0.5">
                         <Grid>
-                            <TextBlock
-                                Margin="1"
-                                FontSize="10"
-                                Text="開催地" />
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="15"
-                                Text="{Binding City}" />
+                            <TextBlock Margin="1" FontSize="10" Text="開催地" />
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Text="{Binding City}" />
                         </Grid>
                     </Border>
-                    <Border
-                        Grid.Column="1"
-                        Margin="0,0,1,1"
-                        BorderBrush="Black"
-                        BorderThickness="0.5">
+                    <Border Grid.Column="1" Margin="0,0,1,1" BorderBrush="Black" BorderThickness="0.5">
                         <Grid>
-                            <TextBlock
-                                Margin="1"
-                                FontSize="10"
-                                Text="試合番号" />
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="15"
-                                Text="{Binding MatchNumber}" />
+                            <TextBlock Margin="1" FontSize="10" Text="試合番号" />
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Text="{Binding MatchNumber}" />
                         </Grid>
                     </Border>
-                    <Border
-                        Grid.Column="2"
-                        Margin="0,0,0,1"
-                        BorderBrush="Black"
-                        BorderThickness="0.5">
+                    <Border Grid.Column="2" Margin="0,0,0,1" BorderBrush="Black" BorderThickness="0.5">
                         <Grid>
-                            <TextBlock
-                                Margin="1"
-                                FontSize="10"
-                                Text="開催日" />
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="13"
-                                Text="{Binding Date}" />
+                            <TextBlock Margin="1" FontSize="10" Text="開催日" />
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13" Text="{Binding Date}" />
                         </Grid>
                     </Border>
-                    <Border
-                        Grid.Column="3"
-                        Margin="0,0,0,1"
-                        BorderBrush="Black"
-                        BorderThickness="0,0.5,0,0.5">
-                        <TextBlock
-                            Margin="1"
-                            FontSize="10"
-                            Text="試合設定時刻" />
+                    <Border Grid.Column="3" Margin="0,0,0,1" BorderBrush="Black" BorderThickness="0,0.5,0,0.5">
+                        <TextBlock Margin="1" FontSize="10" Text="試合設定時刻" />
                     </Border>
                 </Grid>
 
@@ -115,106 +56,34 @@
                         <ColumnDefinition Width="139" />
                         <ColumnDefinition Width="368" />
                     </Grid.ColumnDefinitions>
-                    <Border
-                        Grid.Column="0"
-                        Margin="0,0,1,0"
-                        BorderBrush="Black"
-                        BorderThickness="0,0.5,0.5,0">
+                    <Border Grid.Column="0" Margin="0,0,1,0" BorderBrush="Black" BorderThickness="0,0.5,0.5,0">
                         <Grid>
-                            <TextBlock
-                                Margin="1"
-                                FontSize="10"
-                                Text="会場名" />
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="15"
-                                Text="{Binding Hall}" />
+                            <TextBlock Margin="1" FontSize="10" Text="会場名" />
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Text="{Binding Hall}" />
                         </Grid>
                     </Border>
 
-                    <Border
-                        Grid.Column="1"
-                        Margin="0,0,1,0"
-                        BorderBrush="Black"
-                        BorderThickness="0.5,0.5,0.5,0">
+                    <Border Grid.Column="1" Margin="0,0,1,0" BorderBrush="Black" BorderThickness="0.5,0.5,0.5,0">
                         <Grid>
-                            <TextBlock
-                                Margin="5"
-                                VerticalAlignment="Center"
-                                FontSize="12"
-                                Text="男子" />
-                            <Line
-                                Stroke="Black"
-                                StrokeThickness="1"
-                                Visibility="{Binding IsMen, Converter={StaticResource HiddenOrVissible}}"
-                                X1="41"
-                                X2="59"
-                                Y1="6.4"
-                                Y2="19.2" />
+                            <TextBlock Margin="5" VerticalAlignment="Center" FontSize="12" Text="男子" />
+                            <Line Stroke="Black" StrokeThickness="1" Visibility="{Binding IsMen, Converter={StaticResource HiddenOrVissible}}" X1="41" X2="59" Y1="6.4" Y2="19.2" />
 
-                            <Line
-                                Stroke="Black"
-                                StrokeThickness="1"
-                                Visibility="{Binding IsMen, Converter={StaticResource HiddenOrVissible}}"
-                                X1="41"
-                                X2="59"
-                                Y1="19.2"
-                                Y2="6.4" />
+                            <Line Stroke="Black" StrokeThickness="1" Visibility="{Binding IsMen, Converter={StaticResource HiddenOrVissible}}" X1="41" X2="59" Y1="19.2" Y2="6.4" />
 
-                            <Line
-                                Stroke="Black"
-                                StrokeThickness="1"
-                                Visibility="{Binding IsWoMen, Converter={StaticResource HiddenOrVissible}}"
-                                X1="78"
-                                X2="96"
-                                Y1="6.4"
-                                Y2="19.2" />
-                            <Line
-                                Stroke="Black"
-                                StrokeThickness="1"
-                                Visibility="{Binding IsWoMen, Converter={StaticResource HiddenOrVissible}}"
-                                X1="78"
-                                X2="96"
-                                Y1="19.2"
-                                Y2="6.4" />
+                            <Line Stroke="Black" StrokeThickness="1" Visibility="{Binding IsWoMen, Converter={StaticResource HiddenOrVissible}}" X1="78" X2="96" Y1="6.4" Y2="19.2" />
+                            <Line Stroke="Black" StrokeThickness="1" Visibility="{Binding IsWoMen, Converter={StaticResource HiddenOrVissible}}" X1="78" X2="96" Y1="19.2" Y2="6.4" />
 
-                            <Rectangle
-                                Width="20"
-                                Height="15"
-                                Margin="40,0,0,0"
-                                HorizontalAlignment="Left"
-                                Stroke="Black" />
-                            <Rectangle
-                                Width="20"
-                                Height="15"
-                                Margin="0,0,40,0"
-                                HorizontalAlignment="Right"
-                                Stroke="Black" />
-                            <TextBlock
-                                Margin="5"
-                                HorizontalAlignment="Right"
-                                VerticalAlignment="Center"
-                                FontSize="12"
-                                Text="女子" />
+                            <Rectangle Width="20" Height="15" Margin="40,0,0,0" HorizontalAlignment="Left" Stroke="Black" />
+                            <Rectangle Width="20" Height="15" Margin="0,0,40,0" HorizontalAlignment="Right" Stroke="Black" />
+                            <TextBlock Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="12" Text="女子" />
                         </Grid>
                     </Border>
-                    <Border
-                        Grid.Column="2"
-                        Margin="0,0,2.5,0"
-                        BorderBrush="Black"
-                        BorderThickness="0.5,0.5,0,0">
+                    <Border Grid.Column="2" Margin="0,0,2.5,0" BorderBrush="Black" BorderThickness="0.5,0.5,0,0">
                         <Grid>
 
-                            <TextBlock
-                                Margin="1"
-                                FontSize="10"
-                                Text="対戦チーム" />
+                            <TextBlock Margin="1" FontSize="10" Text="対戦チーム" />
                             <Viewbox Width="200">
-                                <TextBlock
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    Text="{Binding Team}" />
+                                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Team}" />
                             </Viewbox>
                         </Grid>
                     </Border>
