--- a/VolleyballScoreSheet/Views/Substitution.xaml
+++ b/VolleyballScoreSheet/Views/Substitution.xaml
@@ -1,81 +1,58 @@
-﻿<UserControl
-    x:Class="VolleyballScoreSheet.Views.Substitution"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-    xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="http://prismlibrary.com/"
-    xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF"
-    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml">
+﻿<UserControl x:Class="VolleyballScoreSheet.Views.Substitution" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:local="clr-namespace:VolleyballScoreSheet.Views" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:prism="http://prismlibrary.com/" xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF" xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml">
     <prism:Dialog.WindowStyle>
         <Style BasedOn="{StaticResource UiWindow}" TargetType="Window">
-            <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterOwner" />
+            <Setter Property="MinHeight" Value="50" />
             <Setter Property="ResizeMode" Value="NoResize" />
             <Setter Property="ShowInTaskbar" Value="False" />
-            <Setter Property="Width" Value="600" />
-            <Setter Property="MinHeight" Value="50" />
             <Setter Property="SizeToContent" Value="Height" />
+            <Setter Property="Width" Value="600" />
             <Setter Property="WindowStyle" Value="ToolWindow" />
+            <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterOwner" />
         </Style>
     </prism:Dialog.WindowStyle>
 
     <StackPanel>
-        <wpfui:TitleBar
-            Title="選手交代"
-            ShowMaximize="False"
-            ShowMinimize="False" />
+        <wpfui:TitleBar Title="選手交代" ShowMaximize="False" ShowMinimize="False" />
         <StackPanel Margin="10">
-            <TextBlock
-                Margin="5"
-                FontSize="20"
-                Text="{Binding TeamName.Value}" />
-            <ComboBox
-                Margin="0,0,0,0"
-                FontSize="20"
-                ItemsSource="{Binding OnCourtMemberItem.Value}"
-                SelectedItem="{Binding OutMember.Value}">
+            <TextBlock Margin="5" FontSize="20" Text="{Binding TeamName.Value}" />
+            <ComboBox Margin="0,0,0,0" FontSize="20" ItemsSource="{Binding OnCourtMemberItem.Value}" SelectedItem="{Binding OutMember.Value}" SelectedValuePath="Id">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <WrapPanel>
+                            <TextBlock Text="{Binding Id}" />
+                            <TextBlock Text=" " />
+                            <TextBlock Text="{Binding Name}" />
+                        </WrapPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectionChanged">
                         <rp:EventToReactiveCommand Command="{Binding OutSelectionChangedCommand}" />
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </ComboBox>
-            <Label
-                HorizontalAlignment="Center"
-                FontSize="40"
-                FontWeight="ExtraBold">
+            <Label HorizontalAlignment="Center" FontSize="40" FontWeight="ExtraBold">
                 ↓
             </Label>
-            <ComboBox
-                Margin="0,5,0,20"
-                FontSize="20"
-                ItemsSource="{Binding OutCourtMemberItem.Value}"
-                SelectedItem="{Binding InMember.Value}" />
+            <ComboBox Margin="0,5,0,20" FontSize="20" ItemsSource="{Binding OutCourtMemberItem.Value}" SelectedItem="{Binding InMember.Value}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <WrapPanel>
+                            <TextBlock Text="{Binding Id}" />
+                            <TextBlock Text=" " />
+                            <TextBlock Text="{Binding Name}" />
+                        </WrapPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
 
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="3*" />
                 </Grid.ColumnDefinitions>
-                <Button
-                    Grid.Column="0"
-                    Margin="0,0,5,0"
-                    Padding="20,10"
-                    HorizontalAlignment="Stretch"
-                    Background="#cd1141"
-                    Command="{Binding CancelCommand}"
-                    Content="キャンセル"
-                    Style="{StaticResource ColorButton}" />
-                <Button
-                    Grid.Column="1"
-                    Margin="0,0,0,0"
-                    Padding="20,10"
-                    HorizontalAlignment="Stretch"
-                    Command="{Binding SubstitutionCommand}"
-                    Content="交代"
-                    Style="{StaticResource LightButton}" />
+                <Button Grid.Column="0" Margin="0,0,5,0" Padding="20,10" HorizontalAlignment="Stretch" Background="#cd1141" Command="{Binding CancelCommand}" Content="キャンセル" Style="{StaticResource ColorButton}" />
+                <Button Grid.Column="1" Margin="0,0,0,0" Padding="20,10" HorizontalAlignment="Stretch" Command="{Binding SubstitutionCommand}" Content="交代" Style="{StaticResource LightButton}" />
             </Grid>
         </StackPanel>
     </StackPanel>
