--- a/VolleyballScoreSheet/Views/MatchInfo.xaml
+++ b/VolleyballScoreSheet/Views/MatchInfo.xaml
@@ -21,10 +21,10 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Grid.Column="0" Margin="5,0,5,0" Content="チーム" />
-                <TextBox Grid.Row="1" Grid.Column="0" Margin="5,0,5,0" Text="{Binding ATeamName}" />
+                <TextBox Grid.Row="1" Grid.Column="0" Margin="5,0,5,0" Text="{Binding ATeamName.Value}" />
 
                 <Label Grid.Row="0" Grid.Column="1" Margin="5,0,5,0" Content="チーム" />
-                <TextBox Grid.Row="1" Grid.Column="1" Margin="5,0,5,0" Text="{Binding BTeamName}" />
+                <TextBox Grid.Row="1" Grid.Column="1" Margin="5,0,5,0" Text="{Binding BTeamName.Value}" />
             </Grid>
             <Grid Margin="0,10,0,0">
                 <Grid.ColumnDefinitions>
