合計を追加

--- a/VolleyballScoreSheet/Views/ScoreSheet/MatchResult.xaml
+++ b/VolleyballScoreSheet/Views/ScoreSheet/MatchResult.xaml
@@ -43,13 +43,28 @@
                     </Viewbox>
 
                     <TextBlock Margin="5" HorizontalAlignment="Left" FontSize="8" Text="チーム" />
-                    <TextBlock Grid.Column="2" Margin="5" HorizontalAlignment="Right" FontSize="8" Text="チーム" />
+                    <TextBlock
+                        Grid.Column="2"
+                        Margin="5"
+                        HorizontalAlignment="Right"
+                        FontSize="8"
+                        Text="チーム" />
 
 
-                    <TextBlock Grid.Column="0" Margin="0,0,9,0" HorizontalAlignment="Right" FontSize="15" Text="A" />
+                    <TextBlock
+                        Grid.Column="0"
+                        Margin="0,0,9,0"
+                        HorizontalAlignment="Right"
+                        FontSize="15"
+                        Text="A" />
                     <TextBlock Grid.Column="0" HorizontalAlignment="Right" FontSize="25" Text="○" />
 
-                    <TextBlock Grid.Column="1" Margin="9,0,0,0" HorizontalAlignment="Left" FontSize="15" Text="B" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="9,0,0,0"
+                        HorizontalAlignment="Left"
+                        FontSize="15"
+                        Text="B" />
                     <TextBlock Grid.Column="1" HorizontalAlignment="Left" FontSize="25" Text="○" />
 
                     <Border Grid.ColumnSpan="2" BorderBrush="Black" BorderThickness="0,0,0,0.5" />
@@ -96,47 +111,48 @@
                     <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding ASet[0].Timeouts}" />
                     <TextBlock Grid.Row="2" Grid.Column="0" Text="{Binding ASet[1].Timeouts}" />
                     <TextBlock Grid.Row="3" Grid.Column="0" Text="{Binding ASet[2].Timeouts}" />
-                    <TextBlock Grid.Row="4" Grid.Column="0" Text="{Binding ATotal.Timeouts}" />
+                    <TextBlock Grid.Row="4" Grid.Column="0" Text="{Binding ASet[3].Timeouts}" />
 
                     <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding ASet[0].Substitutions}" />
                     <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding ASet[1].Substitutions}" />
                     <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding ASet[2].Substitutions}" />
-                    <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding ATotal.Substitutions}" />
+                    <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding ASet[3].Substitutions}" />
 
                     <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding ASet[0].Win}" />
                     <TextBlock Grid.Row="2" Grid.Column="2" Text="{Binding ASet[1].Win}" />
                     <TextBlock Grid.Row="3" Grid.Column="2" Text="{Binding ASet[2].Win}" />
-                    <TextBlock Grid.Row="4" Grid.Column="2" Text="{Binding ATotal.Win}" />
+                    <TextBlock Grid.Row="4" Grid.Column="2" Text="{Binding ASet[3].Win}" />
 
                     <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding ASet[0].Points}" />
                     <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding ASet[1].Points}" />
                     <TextBlock Grid.Row="3" Grid.Column="3" Text="{Binding ASet[2].Points}" />
-                    <TextBlock Grid.Row="4" Grid.Column="3" Text="{Binding ATotal.Points}" />
+                    <TextBlock Grid.Row="4" Grid.Column="3" Text="{Binding ASet[3].Points}" />
 
                     <TextBlock Grid.Row="1" Grid.Column="4" Text="{Binding SetDuration[0].TotalMinutes}" />
                     <TextBlock Grid.Row="2" Grid.Column="4" Text="{Binding SetDuration[1].TotalMinutes}" />
                     <TextBlock Grid.Row="3" Grid.Column="4" Text="{Binding SetDuration[2].TotalMinutes}" />
+                    <TextBlock Grid.Row="4" Grid.Column="4" Text="{Binding SetDuration[2].TotalMinutes}" />
 
 
                     <TextBlock Grid.Row="1" Grid.Column="5" Text="{Binding BSet[0].Points}" />
                     <TextBlock Grid.Row="2" Grid.Column="5" Text="{Binding BSet[1].Points}" />
                     <TextBlock Grid.Row="3" Grid.Column="5" Text="{Binding BSet[2].Points}" />
-                    <TextBlock Grid.Row="4" Grid.Column="5" Text="{Binding BTotal.Points}" />
+                    <TextBlock Grid.Row="4" Grid.Column="5" Text="{Binding BSet[3].Points}" />
 
                     <TextBlock Grid.Row="1" Grid.Column="6" Text="{Binding BSet[0].Win}" />
                     <TextBlock Grid.Row="2" Grid.Column="6" Text="{Binding BSet[1].Win}" />
                     <TextBlock Grid.Row="3" Grid.Column="6" Text="{Binding BSet[2].Win}" />
-                    <TextBlock Grid.Row="4" Grid.Column="6" Text="{Binding BTotal.Win}" />
+                    <TextBlock Grid.Row="4" Grid.Column="6" Text="{Binding BSet[3].Win}" />
 
                     <TextBlock Grid.Row="1" Grid.Column="7" Text="{Binding BSet[0].Substitutions}" />
                     <TextBlock Grid.Row="2" Grid.Column="7" Text="{Binding BSet[1].Substitutions}" />
                     <TextBlock Grid.Row="3" Grid.Column="7" Text="{Binding BSet[2].Substitutions}" />
-                    <TextBlock Grid.Row="4" Grid.Column="7" Text="{Binding BTotal.Substitutions}" />
+                    <TextBlock Grid.Row="4" Grid.Column="7" Text="{Binding BSet[3].Substitutions}" />
 
                     <TextBlock Grid.Row="1" Grid.Column="8" Text="{Binding BSet[0].Timeouts}" />
                     <TextBlock Grid.Row="2" Grid.Column="8" Text="{Binding BSet[1].Timeouts}" />
                     <TextBlock Grid.Row="3" Grid.Column="8" Text="{Binding BSet[2].Timeouts}" />
-                    <TextBlock Grid.Row="4" Grid.Column="8" Text="{Binding BTotal.Timeouts}" />
+                    <TextBlock Grid.Row="4" Grid.Column="8" Text="{Binding BSet[3].Timeouts}" />
 
                 </Grid>
                 <Grid Height="49">
