--- a/VolleyballScoreSheet/Views/ScoreSheet/Sanctions.xaml
+++ b/VolleyballScoreSheet/Views/ScoreSheet/Sanctions.xaml
@@ -1,4 +1,13 @@
-﻿<UserControl x:Class="VolleyballScoreSheet.Views.ScoreSheet.Sanctions" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:prism="http://prismlibrary.com/" Width="207" Height="210" HorizontalAlignment="Right" VerticalAlignment="Top" prism:ViewModelLocator.AutoWireViewModel="True">
+﻿<UserControl
+    x:Class="VolleyballScoreSheet.Views.ScoreSheet.Sanctions"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:prism="http://prismlibrary.com/"
+    Width="207"
+    Height="210"
+    HorizontalAlignment="Right"
+    VerticalAlignment="Top"
+    prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
         <Border BorderBrush="Black" BorderThickness="2">
             <Grid>
@@ -10,14 +19,64 @@
                         <RowDefinition />
                     </Grid.RowDefinitions>
                     <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="9" Text="不当な要求" />
-                    <TextBlock Grid.Row="1" Margin="0,0,0,2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="9" Text="チーム  A  :  チーム  B" />
-                    <TextBlock Grid.Row="1" Margin="0,0,17,2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13" Text="〇" />
-                    <TextBlock Grid.Row="1" Margin="66.5,0,0,2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13" Text="〇" />
-                    <Line Grid.Row="1" Stroke="Black" StrokeThickness="1" Visibility="{Binding ImproperRequestedA, Converter={StaticResource HiddenOrVissible}}" X1="37" X2="47" Y1="1" Y2="11" />
-                    <Line Grid.Row="1" Stroke="Black" StrokeThickness="1" Visibility="{Binding ImproperRequestedA, Converter={StaticResource HiddenOrVissible}}" X1="37" X2="47" Y1="11" Y2="1" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Margin="0,0,0,2"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontSize="9"
+                        Text="チーム  A  :  チーム  B" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Margin="0,0,17,2"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontSize="13"
+                        Text="〇" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Margin="66.5,0,0,2"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontSize="13"
+                        Text="〇" />
+                    <Line
+                        Grid.Row="1"
+                        Stroke="Black"
+                        StrokeThickness="1"
+                        Visibility="{Binding ImproperRequestedA, Converter={StaticResource HiddenOrVissible}}"
+                        X1="37"
+                        X2="47"
+                        Y1="1"
+                        Y2="11" />
+                    <Line
+                        Grid.Row="1"
+                        Stroke="Black"
+                        StrokeThickness="1"
+                        Visibility="{Binding ImproperRequestedA, Converter={StaticResource HiddenOrVissible}}"
+                        X1="37"
+                        X2="47"
+                        Y1="11"
+                        Y2="1" />
 
-                    <Line Grid.Row="1" Stroke="Black" StrokeThickness="1" Visibility="{Binding ImproperRequestedB, Converter={StaticResource HiddenOrVissible}}" X1="79" X2="89" Y1="1" Y2="11" />
-                    <Line Grid.Row="1" Stroke="Black" StrokeThickness="1" Visibility="{Binding ImproperRequestedB, Converter={StaticResource HiddenOrVissible}}" X1="79" X2="89" Y1="11" Y2="1" />
+                    <Line
+                        Grid.Row="1"
+                        Stroke="Black"
+                        StrokeThickness="1"
+                        Visibility="{Binding ImproperRequestedB, Converter={StaticResource HiddenOrVissible}}"
+                        X1="79"
+                        X2="89"
+                        Y1="1"
+                        Y2="11" />
+                    <Line
+                        Grid.Row="1"
+                        Stroke="Black"
+                        StrokeThickness="1"
+                        Visibility="{Binding ImproperRequestedB, Converter={StaticResource HiddenOrVissible}}"
+                        X1="79"
+                        X2="89"
+                        Y1="11"
+                        Y2="1" />
 
 
                     <Border BorderBrush="Black" BorderThickness="0,0,0,1" />
@@ -120,6 +179,36 @@
                         </DataGridTextColumn>
                     </DataGrid.Columns>
                 </DataGrid>
+
+                <Grid Grid.Row="2" Grid.ColumnSpan="2">
+                    <TextBlock VerticalAlignment="Center" FontSize="8" Text="No 選手番号" />
+                    <TextBlock Grid.Row="1" VerticalAlignment="Center" FontSize="8" Text="C 監督" />
+                    <TextBlock Grid.Row="2" VerticalAlignment="Center" FontSize="8" Text="AC コーチ" />
+
+                    <TextBlock Grid.Column="1" VerticalAlignment="Center" FontSize="8" Text="M マネージャー" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        FontSize="8"
+                        Text="C 部長" />
+                    <TextBlock
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        FontSize="8"
+                        Text="D 遅延の罰則" />
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                </Grid>
 
                 <Border BorderBrush="Black" BorderThickness="0,0,1,0" />
                 <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1,0,0,0" />
