セット合計時間を追加

--- a/VolleyballScoreSheet/Views/ScoreSheet/MatchResult.xaml
+++ b/VolleyballScoreSheet/Views/ScoreSheet/MatchResult.xaml
@@ -131,7 +131,7 @@
                     <TextBlock Grid.Row="1" Grid.Column="4" Text="{Binding SetDuration[0].TotalMinutes}" />
                     <TextBlock Grid.Row="2" Grid.Column="4" Text="{Binding SetDuration[1].TotalMinutes}" />
                     <TextBlock Grid.Row="3" Grid.Column="4" Text="{Binding SetDuration[2].TotalMinutes}" />
-                    <TextBlock Grid.Row="4" Grid.Column="4" Text="{Binding SetDuration[2].TotalMinutes}" />
+                    <TextBlock Grid.Row="4" Grid.Column="4" Text="{Binding TotalTime}" />
 
 
                     <TextBlock Grid.Row="1" Grid.Column="5" Text="{Binding BSet[0].Points}" />
